1st final version with only the validation of the necking missing

--- a/Thermomechanics.bib
+++ b/Thermomechanics.bib
@@ -3624,3 +3624,9 @@ key = {The Standard NAFEMS benchmarks},
 title = {{NAFEMS P18}},
 institution = {NAFEMS}
 }
+
+@article{chung1993time,
+  title={A time integration algorithm for structural dynamics with improved numerical dissipation: the generalized-$\alpha$ method},
+  author={Chung, Jintai and Hulbert, GM1223971},
+  year={1993}
+}
