--- a/continuum_mechanics_and_finite_element_method.tex
+++ b/continuum_mechanics_and_finite_element_method.tex
@@ -1,7 +1,7 @@
-\chapter{Continuum Mechanics and Finite Element Method} \label{ch:continuum_mechanics}
+\chapter{Continuum thermomechanics} \label{ch:continuum_mechanics}
 
-This chapter deals with the concepts needed to described the behavior of a solid undergoing large deformation, as well as, the conservation principles that ensure its mechanical equilibrium.
-It also presents a succint overview of the Finite Element Method as a tool to solve mechanical initial value equilibrium problem.
+This chapter covers the notions required to explain how a solid responds to thermal and mechanical loads under large deformations, including the conservation laws that guarantee mechanical equilibrium and energy conservation.
+Additionally, the application of thermodynamics with internal variables is discussed along with the resulting inferences about the constitutive behavior of the material that makes up the solid.
 These topics are broadly covered in the literature and here the approach used follows \cite{de_souza_neto_computational_2008},
 
 \section{Kinematics of Deformation}
@@ -295,7 +295,7 @@ and $\mat \sigma_d$ is the deviatoric stress defined as
 \section{Heat}
 
 Heat flowing inside a body, entering or leaving it, often leads to temperature changes.
-In Continuum Mechanics, heat is measured in power per unit surface.
+In Continuum Thermomechanics, heat is measured in power per unit surface.
 
 \subsubsection{Heat flux vector}
 
