--- a/solvers_for_coupled_fields.tex
+++ b/solvers_for_coupled_fields.tex
@@ -1,5 +1,5 @@
 
-\chapter{Solution procedures for coupled fields}
+\chapter{Solution procedures for coupled fields} \label{ch:sol_proc_coupl_fields}
 
 An overview of solution techniques for coupled fields is provided in this chapter.
 It comprises methods used to tackle a range of coupled field problems, including aeroelasticity, fluid-structure interaction, and thermomechanical coupling.
