--- a/thermo_mechanical_problem.tex
+++ b/thermo_mechanical_problem.tex
@@ -192,7 +192,7 @@ and in the material description as
     and at each point of $\mathscr{B}$, the First Piola-Kirchhoff stress tensor is the solution of material thermomechanical constitutive initial value problem.
 \end{problem}
 
-\section{Time descretization} \label{sec:time_discretization}
+\section{Time discretization for the constitutive equations} \label{sec:time_discretization}
 
 In the context of thermo-mechanical problems, a general path-dependent model is one that considers both the instantaneous deformation and temperature states as well as their history.
 Under these circumstances, for complex strain, $\bm F(t)$, or temperature paths, $\theta(t)$, the solution of the constitutive initial value problem for a given set of initial conditions is typically unknown.
@@ -366,6 +366,8 @@ and the elemental thermal stiffness matrix as
 \mathbf K^{(e)} = \int_{^h\Omega^{(e)}} {\mathbf H^{\theta}}^T\mathbf H^{\theta}\ud v.
 \end{equation}
 \end{highlight}
+
+\newpage\null\thispagestyle{blank}\newpage
 
 % \section{Linearisation}
 %
