--- a/validation_thermal_solver.tex
+++ b/validation_thermal_solver.tex
@@ -1,6 +1,6 @@
-\chapter{Validation results for the thermal solver}
+\chapter{Validation results for the thermal solver} \label{ch:val_therm_solver}
 
-This chapter provides validation results for the thermal solver implemented in this work.
+This chapter provides validation results for the thermal solver developed in this work.
 The appropriate examples are sourced from \cite{DINEN1991_1_2}  - Prüfung und  Validierung von Rechenprogramm für Brand\-schutz\-nach\-weise mittels allgemeiner Rechenverfahren  and the linear thermo-elastic test in the \cite{NAFEMSbenchmarks}.
 They include thermal effects such as variable conductivity, heat convection and radiation at the boundary.
 The numerical solutions are obtained using the thermal solver in LINKS, employing TRI3, TRI6, QUAD4, QUAD8 elements, in two-dimensions, and TETRA4 and TETRA10 elements in three-dimensions.
