--- a/validation_acceleration.tex
+++ b/validation_acceleration.tex
@@ -1,12 +1,32 @@
-\chapter{Numerical results for the implicit coupling schemes}
+\chapter{Numerical results for the implicit coupling schemes} \label{ch:val_acc_techniques}
 
 This chapter provides validation and comparison results for most of the implicit solution schemes discussed in Chapter~\ref{chapter:implicit_meth}.
 The methods considered are the fixed-point method (see Section~\ref{sec:fixed_point_approach}), the underrelaxation method (see Section~\ref{sec:underrelaxation}), the Aitken relaxation (see Section~\ref{sec:aitken_relaxation}), the Broyden-like family of methods, including Broyden's method (see Section~\ref{sec:multisecant}), the Newton-GMRES method (see Section~\ref{sec:newton_krylov}) and the polynomial vector extrapolation methods, MPE and RRE, in cycling mode (see Section~\ref{sec:vector_extrapolation}).
 The use of predictors is also considered (see Section~\ref{sec:predictor}) as a way to improve efficiency.
 It focuses on two thermomechanical examples for which reference solutions are available in the literature: the quasi-static finite strain thermo-elastic expansion of an infinitely long-thick walled cylinder and the necking of a thermo-elastoplastic circular bar.
 
+It is important to remark that all the numerical results shown in this chapter are obtained
+in the same machine with the specifications provided in Table~\ref{tab:specifications}.
+Each numerical simulation is performed only with 1 CPU core allocated to each solver.
 
-\jvc{Add the description of the machine used to run the problems}
+\begin{table}[htbp]
+\caption{Specifications of the numerical testing machine.}
+\label{tab:specifications}
+\centering
+\begin{tabular}{clc}
+\hline\hline & \vphantom{\Big |}Model & \(2 \times\) Intel Xeon E5-2650 v4 \\
+& \vphantom{\Big |}Microarchitecture & Broadwell \\
+& \vphantom{\Big |}Base/Max Frequency & \(2.20 / 2.90 \mathrm{GHz}\) \\
+\multirow{2}{*} {CPU} & \vphantom{\Big |}Num. of cores/threads & \(24 / 48(2 \times 12 / 24)\) \\
+& \vphantom{\Big |}Ll Cache & \(718 \mathrm{KiB}(2 \times 384 \mathrm{KiB})\) \\
+& \vphantom{\Big |}L2 Cache & \(6 \mathrm{MiB}(2 \times 3 \mathrm{MiB})\) \\
+& \vphantom{\Big |}L3 Cache & \(60 \mathrm{MiB}(2 \times 30 \mathrm{MiB})\) \\
+& \vphantom{\Big |}Numerical features & SSE3 SSSE3 AVX2 \\
+\hline \multirow{2}{*} {Memory } & \vphantom{\Big |}Capacity & \(128 \mathrm{~GB}(8 \times 16 \mathrm{~GB})\) \\
+& \vphantom{\Big |}Specification & DDR4 @ \(2400 \mathrm{MHz}\) \\
+\hline\hline
+\end{tabular}
+\end{table}
 
 % \section{Second Danilovskaya problem}
 %
@@ -360,6 +380,10 @@ The most efficient Newton-GMRES methods analyzed are the ones using a constant f
 The polynomial vector extrapolation methods in cycling mode considered are the MPE and RRE, restricted to at most five evaluations of the residual function per nonlinear iteration.
 Thus, the combinations analyzed are characterized by the ordered pairs \((n,k)=(1,1)\), \((1,2)\), \((1,3)\), \((2,1)\), \((2,2)\) and \((3,1)\) (see Section~\ref{sec:vector_extrapolation}).
 
+No combinations with \(n=0\) are considered to allow for a fair comparison with other methods.
+Since the convergence metric is given by Equation~\eqref{eq:def_res_used}, the residual corresponding to the solution found for the present nonlinear iteration must be evaluated.
+While for all the other methods considered this evaluation can be used in the next nonlinear iteration to move the method forward, this is not the case for the polynomial vector extrapolation methods when \(n<1\).
+
 Figure~\ref{fig:thick_cylinder_extrap_pol_residual_1st_time_step_quad4fbar_pred} presents the residual in percentage as a function of the number of nonlinear iterations in the first time step with \(\alpha_T=\SI{1.5e-4}{\kelvin^{-1}}\) and \(\dot u_0 =\SI{0.5}{\milli\meter\second^{-1}}\).
 In general, the larger the number of residual evaluations per nonlinear iteration, the faster rate of convergence.
 Also, it seems that for the same number of residual evaluations per nonlinear iterations, e.g., \((n,k)=(1,3)\), \((2,2)\) and \((3,1)\) or \((n,k)=(1,2)\), \((2,1)\), it is more profitable to increase \(k\) than \(n\).
@@ -380,7 +404,7 @@ As hinted by the previous results regarding the residual, the methods with more 
 \begin{figure}[htbp]
  \centering
  \includegraphics[width=0.9\textwidth]{thick_cylinder_extrap_pol_n_iter_time_quad4fbar_pred}
- \caption{number of nonlinear iterations needed to solve the coupled problem at each time step and the total number of iterations needed to solve the coupled problem for the polynomial vector extrapolation methods in cycling mode, MPE and RRE, restricted to at most five evaluations of the residual function per nonlinear iteration in the solution of the quasi-static expansion of a thermoelastic thick-walled cylinder with \(\alpha_T=\SI{1.5e-4}{\kelvin^{-1}}\) and \(\dot u_0 =\SI{0.5}{\milli\meter\second^{-1}}\).}
+ \caption{Number of nonlinear iterations needed to solve the coupled problem at each time step and the total number of iterations needed to solve the coupled problem for the polynomial vector extrapolation methods in cycling mode, MPE and RRE, restricted to at most five evaluations of the residual function per nonlinear iteration in the solution of the quasi-static expansion of a thermoelastic thick-walled cylinder with \(\alpha_T=\SI{1.5e-4}{\kelvin^{-1}}\) and \(\dot u_0 =\SI{0.5}{\milli\meter\second^{-1}}\).}
 \label{fig:thick_cylinder_extrap_pol_n_iter_time_quad4fbar_pred}
 \end{figure}
 
@@ -396,7 +420,7 @@ There is not a clear winner regarding the total number of residual evaluations t
 
 \FloatBarrier
 
-\subsubsection{comparison of the best methods in each class}
+\subsubsection{Comparison of the best methods in each class}
 
 In this section, the best-performing methods from each of the classes considered are compared with each other.
 The implicit methods selected are the Aitken relaxation, Broyden's method with Type I update, a Broyden-like method with \(\beta=-1\) and \(s=2\), the Newton-GMRES method with \(\eta=\num{e-3}\) and the MPE in cycling mode with \((n,k)=(1,3)\).
@@ -404,7 +428,8 @@ The implicit methods selected are the Aitken relaxation, Broyden's method with T
 Figure~\ref{fig:thick_cylinder_comparison_best_cpu_time_n_iter_coupl_strength_quad4fbar_pred} shows the total CPU time in seconds and the total number of residual evaluations as a function of the thermal expansion coefficient for the best performing implicit methods in each class considered.
 The best performing methods are Broyden's method and the Broyden-like method with \(\beta=-1\), followed by the Aitken relaxation, the MPE in cycling mode, and the Newton-GMRES method.
 As the thermal coefficient, and thus the strength of the coupling, increases, all the methods display a loss in efficiency.
-Table~\ref{tab:res_cpu_nr_func_best} surmises all the results previously discussed regarding the computational time taken by each solver.
+Table~\ref{tab:res_cpu_nr_func_best} surmises all the results previously discussed regarding the computational time taken by each solver and the number of residual evaluations.
+The best performances are highlighted in gray.
 
 Figure~\ref{fig:thick_cylinder_comparison_best_time_profile_mesh_size_quad4fbar_pred} depicts the total CPU time in seconds, and time profile, as a function of the mesh size.
 For all solvers and mesh sizes, evaluating the solvers is the operation that takes up the most computational time.
@@ -644,7 +669,7 @@ This behavior is probably due to the poor choice of the relaxation coefficient.
 \begin{figure}[htbp]
  \centering
  \includegraphics[width=.85\textwidth]{necking_single_iter_n_iter_time_quad4fbar_pred}
- \caption{number of nonlinear iterations needed to solve the coupled problem at each time step and the total number of iterations needed to solve the coupled problem for the implicit methods that perform only one evaluation per nonlinear iteration in the solution of the necking of a circular bar with \(w_0=w_h=\SI{1e-2}{\kelvin^{-1}}\).}
+ \caption{Number of nonlinear iterations needed to solve the coupled problem at each time step and the total number of iterations needed to solve the coupled problem for the implicit methods that perform only one evaluation per nonlinear iteration in the solution of the necking of a circular bar with \(w_0=w_h=\SI{1e-2}{\kelvin^{-1}}\).}
 \label{fig:necking_single_iter_n_iter_time_quad4fbar_pred}
 \end{figure}
 
@@ -755,6 +780,10 @@ The methods using a constant forcing also fail to converge for \(w_0=w_h=\SI{2e-
 The polynomial vector extrapolation methods in cycling mode considered are the MPE and RRE, restricted to at most five evaluations of the residual function per nonlinear iteration.
 Thus, the combinations analyzed are characterized by the ordered pairs \((n,k)=(1,1)\), \((1,2)\), \((1,3)\), \((2,1)\), \((2,2)\) and \((3,1)\).
 
+No combinations with \(n=0\) are considered to allow for a fair comparison with other methods.
+Since the convergence metric is given by Equation~\eqref{eq:def_res_used}, the residual corresponding to the solution found for the present nonlinear iteration must be evaluated.
+While for all the other methods considered this evaluation can be used in the next nonlinear iteration to move the method forward, this is not the case for the polynomial vector extrapolation methods when \(n<1\).
+
 Figure~\ref{fig:necking_extrap_pol_n_iter_time_quad4fbar_pred} presents the number of residual evaluations needed to solve the coupled problem at each time step and the total (cumulative) number of iterations needed with \(w_0=w_h=\SI{1e-2}{\kelvin^{-1}}\).
 There is no clear difference between the MPE and the RRE.
 The moment of strongest coupling is visible for the methods using few residual evaluations per nonlinear iteration, such as \((n,k)=(1,1)\).
@@ -781,7 +810,7 @@ The second and third best methods are also the ones using five residual evaluati
 
 \FloatBarrier
 
-\subsubsection{comparison of the best methods in each class}
+\subsubsection{Comparison of the best methods in each class}
 
 In this section, the best-performing methods from each of the classes considered are compared with each other.
 The implicit methods selected are Aitken relaxation, Broyden's method with Type I update, a Broyden-like method with \(\beta=-1\) and \(s=2\), the Newton-GMRES method with \(\eta=\num{e-3}\) and the MPE in cycling mode with \((n,k)=(1,3)\).
@@ -791,7 +820,8 @@ The best performing methods are Broyden's and the Broyden-like methods, whose pe
 They are followed by the Aitken relaxation and the MPE in cycling mode, also displaying a comparable efficiency.
 The Newton-GMRES method is the worse performing method considered.
 As the thermal softening parameters, and thus the strength of the coupling, increase, all the methods display approximately a similar loss in efficiency.
-Table~\ref{tab:necking_res_cpu_nr_func_best} surmises all the results previously discussed regarding the computational time each solvers takes.
+Table~\ref{tab:necking_res_cpu_nr_func_best} surmises all the results previously discussed regarding the computational time each solvers takes and the number of residual evaluations.
+The best performances are highlighted in gray.
 
 \begin{figure}[hbtp]
  \includegraphics[width=.85\textwidth]{necking_comparison_best_cpu_time_n_iter_coupl_strength_quad4fbar_pred}
@@ -843,11 +873,11 @@ Finally, the use of predictors allows the Newton-GMRES method to converge for \(
 
 \section{Conclusions}
 
-Given the set of numerical results shown, Broyden-like techniques with \(\beta=-1\), \(s=1\), which is also Broyden's method, and \(s=2\), both with Type I update appear to be the most advantageous methods in terms of computational effort.
+Given the set of numerical results shown, Broyden-like techniques with \(\beta=-1\), Type I update, and \(s=1\), which coincides with Broyden's method, and \(s=2\), appear to be the most advantageous methods in terms of computational effort.
 The Aitken relaxation is also effective, particularly for the thermoelastic problem.
 It requires the least amount of memory and is the easiest to implement.
 The MPE in cycling mode with \((s,k)=(1,3)\) competes with the Aitken relaxation for the thermo-elastoplastic problem, but is more comparable to the Newton-GMRES with \(\eta=\num{1e-3}\) for the thermoeleastic problem.
-Among the techniques deemed the best in each class, the last one performs the poorest.
+Among the techniques deemed the best in each class, this last one performs the poorest.
 However, because the Jacobian of the residual is well estimated, it is the approach that most easily accepts global strategies such as line search.
 The requirement for a global strategy isn't illustrated in the problems described, but it may be significant in other circumstances.
 Last but not least, the polynomial predictors significantly increased computing effectiveness without adding to the complexity of the numerical methods.
